--- a/index.html
+++ b/index.html
@@ -3,23 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple Website</title>
+    <title>My Enhanced Website</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 50px;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
         }
-        h1 {
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav {
+            margin: 20px 0;
+            text-align: center;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
             color: #333;
         }
-        p {
-            color: #666;
+        .container {
+            width: 80%;
+            margin: 0 auto;
+            overflow: hidden;
+        }
+        .content {
+            margin: 20px 0;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Simple Website</h1>
-    <p>This is a simple HTML page hosted on GitHub Pages.</p>
+    <header>
+        <h1>Welcome to My Enhanced Website</h1>
+    </header>
+    <nav>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <div class="container">
+        <div id="about" class="content">
+            <h2>About Us</h2>
+            <p>We are a team of passionate developers creating amazing websites.</p>
+        </div>
+        <div id="services" class="content">
+            <h2>Our Services</h2>
+            <ul>
+                <li>Web Development</li>
+                <li>App Development</li>
+                <li>SEO Optimization</li>
+            </ul>
+        </div>
+        <div id="contact" class="content">
+            <h2>Contact Us</h2>
+            <p>Email: info@example.com</p>
+            <p>Phone: (123) 456-7890</p>
+        </div>
+    </div>
+    <footer>
+        <p>&copy; 2023 My Enhanced Website</p>
+    </footer>
 </body>
 </html>
