Update website content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{Business Name}} Website</title>
+    <title>Deleens Home Bake</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -78,40 +78,36 @@
 </head>
 <body>
     <header>
-        <img src="https://raw.githubusercontent.com/Reeshon/my-website/main/logo.png" alt="{{Business Name}} Logo" style="max-width: 150px;">
-        <h1>Welcome to {{Business Name}}</h1>
+        <img src="https://raw.githubusercontent.com/Reeshon/my-website/main/logo.png" alt="Deleens Home Bake Logo" style="max-width: 150px;">
+        <h1>Welcome to Deleens Home Bake</h1>
     </header>
     <nav>
+        <a href="#order">Order</a>
         <a href="#about">About</a>
-        <a href="#services">Services</a>
         <a href="#contact">Contact</a>
     </nav>
     <div class="hero">
-        <h1>Welcome to {{Business Name}}</h1>
-        <p>{{Hero Message}}</p>
-        <a href="#contact" class="button">{{Call to Action}}</a>
+        <h1>Welcome to Deleens Home Bake</h1>
+        <p>Your home for delicious homemade baked goods.</p>
+        <a href="#order" class="button">Order Now</a>
     </div>
     <div class="container">
+        <div id="order" class="content">
+            <h2>Order</h2>
+            <p>Place your orders here. (Placeholder for order form)</p>
+        </div>
         <div id="about" class="content">
             <h2>About Us</h2>
-            <p>{{About Us Text}}</p>
-        </div>
-        <div id="services" class="content">
-            <h2>Our Services</h2>
-            <ul>
-                <li>{{Service 1}}</li>
-                <li>{{Service 2}}</li>
-                <li>{{Service 3}}</li>
-            </ul>
+            <p>Learn more about Deleens Home Bake. (Placeholder for about us text)</p>
         </div>
         <div id="contact" class="content">
             <h2>Contact Us</h2>
-            <p>Email: {{Contact Email}}</p>
-            <p>Phone: {{Contact Phone}}</p>
+            <p>Email: info@deleenshomebake.com</p>
+            <p>Phone: (123) 456-7890</p>
         </div>
     </div>
     <footer>
-        <p>&copy; {{Current Year}} {{Business Name}}</p>
+        <p>&copy; 2023 Deleens Home Bake</p>
         <p style="font-size: 0.8em;">Last updated: <script>document.write(new Date().toLocaleString())</script></p>
     </footer>
 </body>
