--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             background-image: url('https://raw.githubusercontent.com/Reeshon/my-website/main/background.png');
             background-size: cover;
             background-position: center;
+            background-repeat: no-repeat;
         }
         header {
             background-color: #333;
@@ -54,6 +55,7 @@
             background-image: url('https://raw.githubusercontent.com/Reeshon/my-website/main/background.png');
             background-size: cover;
             background-position: center;
+            background-repeat: no-repeat;
             color: #fff;
             text-align: center;
             padding: 100px 0;
