Update website content

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <h1>Welcome to Deleens Home Bake</h1>
     </header>
     <nav>
-        <a href="#order">Order</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
+        <a href="order.html">Order</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
     </nav>
     <div class="hero">
         <h1>Welcome to Deleens Home Bake</h1>
         <p>Your home for delicious homemade baked goods.</p>
-        <a href="#order" class="button">Order Now</a>
+        <a href="order.html" class="button">Order Now</a>
     </div>
     <div class="container">
         <div id="order" class="content">
