Update website content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="ribbon">
+        <img src="https://raw.githubusercontent.com/Reeshon/my-website/main/logo.png" alt="Deleens Home Bake Logo">
+        <h1>Deleens Home Bake</h1>
+    </div>
     <nav>
         <a href="order.html">Order</a>
         <a href="about.html">About</a>
