Update website content

--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
             <p>Phone: (123) 456-7890</p>
             <div id="map">
                 <!-- Placeholder for Google Map -->
+                <img src="https://via.placeholder.com/600x400" alt="Map Placeholder">
             </div>
         </div>
     </div>
