--- a/about.html
+++ b/about.html
@@ -20,7 +20,12 @@
         </div>
         <div class="content">
             <h2>Meet the Team</h2>
-            <p>Get to know the people behind Deleens Home Bake. (Placeholder for team introduction)</p>
+            <div class="team-gallery">
+                <!-- Placeholder for team member images and descriptions -->
+                <img src="https://via.placeholder.com/150" alt="Team Member 1">
+                <img src="https://via.placeholder.com/150" alt="Team Member 2">
+                <img src="https://via.placeholder.com/150" alt="Team Member 3">
+            </div>
         </div>
         <div class="content">
             <h2>Customer Testimonials</h2>
