--- a/order.html
+++ b/order.html
@@ -34,6 +34,9 @@
             <h2>Our Products</h2>
             <div class="product-gallery">
                 <!-- Placeholder for product images and descriptions -->
+                <img src="https://via.placeholder.com/150" alt="Product 1">
+                <img src="https://via.placeholder.com/150" alt="Product 2">
+                <img src="https://via.placeholder.com/150" alt="Product 3">
             </div>
         </div>
         <div class="content">
