--- a/order.html
+++ b/order.html
@@ -4,39 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order - Deleens Home Bake</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="order.html">Order</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Deleens Home Bake</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="order.html">Order</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-    <div class="container">
+    <div class="container mt-5">
         <div class="content">
             <h2>Place Your Order</h2>
             <form>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <label for="phone">Phone:</label>
-                <input type="tel" id="phone" name="phone" required>
-                <label for="order-details">Order Details:</label>
-                <textarea id="order-details" name="order-details" required></textarea>
-                <label for="instructions">Special Instructions:</label>
-                <textarea id="instructions" name="instructions"></textarea>
-                <button type="submit">Submit Order</button>
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" class="form-control" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone:</label>
+                    <input type="tel" class="form-control" id="phone" name="phone" required>
+                </div>
+                <div class="form-group">
+                    <label for="order-details">Order Details:</label>
+                    <textarea class="form-control" id="order-details" name="order-details" required></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="instructions">Special Instructions:</label>
+                    <textarea class="form-control" id="instructions" name="instructions"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit Order</button>
             </form>
         </div>
         <div class="content">
             <h2>Our Products</h2>
-            <div class="product-gallery">
-                <!-- Placeholder for product images and descriptions -->
-                <img src="https://via.placeholder.com/150" alt="Product 1">
-                <img src="https://via.placeholder.com/150" alt="Product 2">
-                <img src="https://via.placeholder.com/150" alt="Product 3">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="https://via.placeholder.com/150" alt="Product 1" class="img-fluid" loading="lazy">
+                </div>
+                <div class="col-md-4">
+                    <img src="https://via.placeholder.com/150" alt="Product 2" class="img-fluid" loading="lazy">
+                </div>
+                <div class="col-md-4">
+                    <img src="https://via.placeholder.com/150" alt="Product 3" class="img-fluid" loading="lazy">
+                </div>
             </div>
         </div>
         <div class="content">
@@ -44,5 +76,12 @@
             <p>Here are the prices for our products. (Placeholder for pricing information)</p>
         </div>
     </div>
+    <footer class="bg-light text-center py-3">
+        <p>&copy; 2023 Deleens Home Bake</p>
+        <p>Last updated: <script>document.write(new Date().toLocaleString())</script></p>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
