--- a/index.html
+++ b/index.html
@@ -4,20 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deleens Home Bake</title>
+    <meta name="description" content="Deleens Home Bake - Your home for delicious homemade baked goods.">
+    <meta name="keywords" content="bakery, homemade, baked goods, Deleens Home Bake">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXX-X"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-XXXXXX-X');
+    </script>
 </head>
 <body>
-    <nav>
-        <a href="order.html">Order</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Deleens Home Bake</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="order.html">Order</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-    <div class="hero">
+    <div class="hero text-center">
         <h1>Deleens Home Bake</h1>
         <p>Your home for delicious homemade baked goods.</p>
-        <a href="order.html" class="button">Order Now</a>
+        <a href="order.html" class="btn btn-primary">Order Now</a>
     </div>
-    <div class="container">
+    <div class="container mt-5">
         <div id="order" class="content">
             <h2>Order</h2>
             <p>Place your orders here. (Placeholder for order form)</p>
@@ -32,5 +57,13 @@
             <p>Phone: (123) 456-7890</p>
         </div>
     </div>
+    <footer class="bg-light text-center py-3">
+        <p>&copy; 2023 Deleens Home Bake</p>
+        <p>Last updated: <script>document.write(new Date().toLocaleString())</script></p>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
