Update website content

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="#">Deleens Home Bake</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -53,12 +53,16 @@
         </div>
         <div id="contact" class="content">
             <h2>Contact Us</h2>
-            <p>Email: info@deleenshomebake.com</p>
-            <p>Phone: (123) 456-7890</p>
+            <p>Email: deleens@mail.com</p>
+            <p>Phone: 062 392 1456</p>
         </div>
     </div>
-    <footer class="bg-light text-center py-3">
+    <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2023 Deleens Home Bake</p>
+        <p>Follow us on 
+            <a href="https://www.instagram.com/_deleens/" class="text-white">Instagram</a> and 
+            <a href="https://www.facebook.com/profile.php?id=61556402116452" class="text-white">Facebook</a>
+        </p>
         <p>Last updated: <script>document.write(new Date().toLocaleString())</script></p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
