--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="#">Deleens Home Bake</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
             </ul>
         </div>
     </nav>
-    <div class="container mt-5">
+    <div class="container mt-5 pt-5">
         <div class="content">
             <h2>Contact Us</h2>
             <form>
@@ -55,16 +55,20 @@
         </div>
         <div class="content">
             <h2>Our Location</h2>
-            <p>Email: info@deleenshomebake.com</p>
-            <p>Phone: (123) 456-7890</p>
+            <p>Email: deleens@mail.com</p>
+            <p>Phone: 062 392 1456</p>
             <div id="map">
                 <!-- Placeholder for Google Map -->
                 <img src="https://via.placeholder.com/600x400" alt="Map Placeholder" class="img-fluid">
             </div>
         </div>
     </div>
-    <footer class="bg-light text-center py-3">
+    <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2023 Deleens Home Bake</p>
+        <p>Follow us on 
+            <a href="https://www.instagram.com/_deleens/" class="text-white">Instagram</a> and 
+            <a href="https://www.facebook.com/profile.php?id=61556402116452" class="text-white">Facebook</a>
+        </p>
         <p>Last updated: <script>document.write(new Date().toLocaleString())</script></p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
