--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="order.html">Order</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link active" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
