--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" aria-label="Main Navigation">
         <a class="navbar-brand" href="#">Deleens Home Bake</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="order.html">Order</a>
+                    <a class="nav-link active" href="order.html">Order</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
